# vineyard

./: .gitignore  MANIFEST.in  Makefile  README.md  config.json  pyproject.toml  shellcheck  template.env  template.tfvars
.githooks/: pre-commit
.github/workflows/: check_version.yaml  publish.yaml  test.yaml
docs/: Architecture.drawio  architecture.drawio  library.md  resource_name_convention.md  vine.md
docs/assets/: architecture.drawio
env/: databricks.tf  main.tf  variables.tf
modules/azurerm-data_factory/: adls.tf  databricks.tf  key_vault.tf  main.tf  variables.tf
modules/azurerm-dbw_private_link/: variables.tf
root/: adls.tf  databricks.tf  main.tf  outputs.tf  variables.tf  virtual_network.tf
scripts/: env.sh  install.sh  root.sh
scripts/ci/: check_version.sh
scripts/shellcheck/: install.sh
src/: .terraform.lock.hcl  adls.tf  data_factory.tf  databricks.tf  key_vault.tf  main.py  main.tf  outputs.tf  terraform.tf  virtual_network.tf
src/vinery/: dependency_graph.py  io.py  tf.py
src/vinery/cli/: arguments.py  cli.py  commands.py  options.py  options_tf_vars.py  setup.py
src/vineyard/: cli.py  cli_arguments.py  cli_options.py  dependency_graph.py  io.py  main.py  tf.py
src/vineyard/cli/: arguments.py  cli.py  options.py  options_tf_vars.py  setup.py
tests/: test_deps.py  test_io.py  test_tf.py
tests/cli/: conftest.py  test_arguments.py  test_cli.py
tf-plans/default/env/: data_factory.tf  main.tf  variables_dotenv.tf
tf-plans/default/root/: main.tf
tf-vars/: root.tfvars
