[project]
name = "vinery"
version = "0.1.0"
authors = [
    { name = "Francisco A. B. Sampaio", email = "franciscoabsampaio@protonmail.com" }
]
description = "CLI tool for building modular infrastructure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.8",
  "networkx>=3.1.0",
  "matplotlib"
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[project.scripts]
vine = "vinery.cli.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.package-data]
vinery = ["../library/*"]  # Ensure `library/` is included

[tool.setuptools.exclude-package-data]
vinery = ["tests/*"]  # Exclude tests if needed

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
