[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vinery"
version = "0.1.0"
authors = [
    { name = "Francisco A. B. Sampaio", email = "franciscoabsampaio@protonmail.com" }
]
description = "CLI tool for building modular infrastructure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
  "click>=8.1.8",
  "networkx>=3.1.0",
  "matplotlib"
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[project.scripts]
vine = "vinery.cli.cli:cli"


# --- HATCH specific configuration ---

[tool.hatch.version]
# You can manage the version source if needed, e.g.:
path = "src/vinery/__init__.py"

[tool.hatch.build]

[tool.hatch.build.targets.wheel]
# It maps the 'src/vinery' directory to the 'vinery' package in the wheel.
packages = ["src/vinery"]

# The key is the SOURCE path relative to the project root.
# The value is the TARGET path within the wheel (relative to wheel root).
force-include = { "library" = "/vinery/library" }

[tool.hatch.envs.test]
dependencies = [
  "pytest"
]
[tool.hatch.envs.test.scripts]
run = "pytest {args}"
